--- a/src/app/materias/materias.page.html
+++ b/src/app/materias/materias.page.html
@@ -1,13 +1,13 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>Materias</ion-title>
+    <ion-title>Trabajos</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Materias</ion-title>
+      <ion-title size="large">Trabajos</ion-title>
     </ion-toolbar>
   </ion-header>
 
@@ -16,7 +16,7 @@
       <ion-item>
         <ion-icon slot="start" name="book-outline"></ion-icon>
         <ion-label>
-          <h2><strong>Materia: </strong>{{ materiasItem.nombre}}</h2>
+          <h2><strong>Trabajo: </strong>{{ materiasItem.nombre}}</h2>
           <h2><strong>Programa: </strong>{{ materiasItem.programa}}</h2>
           <h2><strong>Semestre: </strong>{{ materiasItem.semestre}}</h2>
           <h2><strong>Horario: </strong>{{ materiasItem.horario}}</h2>
