--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -3,10 +3,9 @@
   <ion-tab-bar style="height: 100px;" slot="bottom">
 
     <ion-tab-button style="font-size: 20px;" tab="Materias" href="/materias/materias">
-      <ion-icon style="font-size: 50px;" aria-hidden="true" name="book-outline"></ion-icon>
-      <ion-label>Materias</ion-label>
+      <ion-icon style="font-size: 50px;" aria-hidden="true" name="people-outline"></ion-icon>
+      <ion-label>Tabajos</ion-label>
     </ion-tab-button>
 
   </ion-tab-bar>
-
 </ion-tabs>
