--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -2,7 +2,7 @@
 
   <ion-tab-bar style="height: 100px;" slot="bottom">
 
-    <ion-tab-button style="font-size: 20px;" tab="Trabajos" href="/trabajos/trabajos">
+    <ion-tab-button style="font-size: 20px;" tab="trabajos" href="/trabajos/trabajos">
       <ion-icon style="font-size: 50px;" aria-hidden="true" name="people-outline"></ion-icon>
       <ion-label>Tabajos</ion-label>
     </ion-tab-button>
