--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -7,5 +7,9 @@
       <ion-label>Tabajos</ion-label>
     </ion-tab-button>
 
+    <ion-tab-button style="font-size: 20px;" tab="balance" href="/balance/balance">
+      <ion-icon style="font-size: 50px;" aria-hidden="true" name="cash-outline"></ion-icon>
+      <ion-label>Balance</ion-label>
+    </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
