--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
       <ion-list>
         <ion-item routerLink="/home">Inicio</ion-item>
         <ion-item routerLink="/profile">Perfil</ion-item>
-        <ion-item routerLink="/settings">Configuración</ion-item>
+        <ion-item routerLink="/configuracion">Configuración</ion-item>
       </ion-list>
     </ion-content>
   </ion-menu>
