--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,9 +9,9 @@
 
     <ion-content>
       <ion-list>
-        <ion-item routerLink="/home">Inicio</ion-item>
-        <ion-item routerLink="/profile">Perfil</ion-item>
-        <ion-item routerLink="/configuracion">Configuración</ion-item>
+        <ion-item routerLink="/home" (click)="closeMenu()">Inicio</ion-item>
+        <ion-item routerLink="/profile" (click)="closeMenu()">Perfil</ion-item>
+        <ion-item routerLink="/configuracion" (click)="closeMenu()">Configuración</ion-item>
       </ion-list>
     </ion-content>
   </ion-menu>
