--- a/src/app/configuracion/configuracion.page.html
+++ b/src/app/configuracion/configuracion.page.html
@@ -19,7 +19,7 @@
       </div>
       <div style="margin: 0 10px; text-align: center;">
         <div class="label">Descripción Botón 2</div>
-        <ion-button expand="full" [routerLink]="['/tipo-gastos']">Botón 2</ion-button>
+        <ion-button expand="full" [routerLink]="['/tipo-gasto']">Botón 2</ion-button>
       </div>
     </div>
     <div class="row" style="display: flex; justify-content: center;">
@@ -28,8 +28,8 @@
         <ion-button expand="full" [routerLink]="['/variedad-coffe']">Variedades de cafe</ion-button>
       </div>
       <div style="margin: 0 10px; text-align: center;">
-        <div class="label">Descripción Botón 4</div>
-        <ion-button expand="full" [routerLink]="['/tipo-trabajos']">Botón 4</ion-button>
+        <!-- <div class="label">Descripción Botón 4</div> -->
+        <ion-button expand="full" [routerLink]="['/tipo-trabajos']">Tipos de trabajos</ion-button>
       </div>
     </div>
   </div>
