--- a/src/app/configuracion/configuracion.page.html
+++ b/src/app/configuracion/configuracion.page.html
@@ -14,12 +14,10 @@
   <div class="container" style="display: flex; flex-direction: column; align-items: center; margin: 20px;">
     <div class="row" style="display: flex; justify-content: center; margin-bottom: 10px;">
       <div style="margin: 0 10px; text-align: center;">
-        <div class="label">Descripción Botón 1</div>
         <ion-button expand="full" [routerLink]="['/trabajadores']">Botón 1</ion-button>
       </div>
       <div style="margin: 0 10px; text-align: center;">
-        <div class="label">Descripción Botón 2</div>
-        <ion-button expand="full" [routerLink]="['/tipo-gasto']">Botón 2</ion-button>
+        <ion-button expand="full" [routerLink]="['/tipo-gasto']">Tipo de gastos</ion-button>
       </div>
     </div>
     <div class="row" style="display: flex; justify-content: center;">
