--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,4 +1,5 @@
-<ion-header [translucent]="true">
+<ion-content [fullscreen]="true">
+  <ion-header>
   <ion-toolbar>
     <ion-title>
       Tab 1
@@ -6,7 +7,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
+<ion-content [fullscreen]="true"style="--background: url('assets/imagenes/coffe.jpg') no-repeat center center / cover;">
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">Tab 1</ion-title>
