--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -5,9 +5,9 @@
     <ion-tab-button style="font-size: 20px;" tab="ingresos" href="/ingresos">
       <img width="50" height="50" src="https://img.icons8.com/ios/50/request-money.png" alt="request-money"/>
       <ion-label>Ingresos</ion-label>
-  </ion-tab-button>
+     </ion-tab-button>
 
-    <ion-tab-button style="font-size: 20px;" tab="gastos" href="/balance/balance">
+    <ion-tab-button style="font-size: 20px;" tab="gastos" href="/gastos">
       <img width="50" height="50" src="https://img.icons8.com/ios/50/split-money.png" alt="split-money"/>
       <ion-label>Gastos</ion-label>
     </ion-tab-button>
