--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -12,7 +12,7 @@
       <ion-label>Gastos</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button style="font-size: 20px;" tab="trabajos" href="/trabajos/trabajos">
+    <ion-tab-button style="font-size: 20px;" tab="trabajoganado" href="/trabajoganado">
       <img width="60" height="50" src="https://img.icons8.com/quill/50/work.png" alt="work"/>
       <ion-label>Tabajos</ion-label>
     </ion-tab-button>
