--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
       <ion-list>
 
         <ion-item routerLink="/tabs/tab1" (click)="closeMenu()">Inicio</ion-item>
-        <ion-item routerLink="/profile" (click)="closeMenu()">Perfil</ion-item>
+        <ion-item routerLink="/tabs/tab2" (click)="closeMenu()">Perfil</ion-item>
         <ion-item routerLink="/configuracion" (click)="closeMenu()">Configuración</ion-item>
       </ion-list>
     </ion-content>
